HTML Halado vége

--- a/project/blog.html
+++ b/project/blog.html
@@ -1,83 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog page</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+	<meta name="robots" content="index, follow" />
+	<meta name="description" content="Bolg bejegyzések a vebfejlesztés világából." />
+	<meta name="keywords" content="blog, naplo, webfejlesztes, html5 tanfolyam" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Webfejlesztési napkló</title>
+	<link rel="stylesheet" href="/assets/css/main.css">
 </head>
+
 <body>
-    <header id="header">
-        <a 
-            class="logo"
-            href="/index.html">
-            HTML5
-        </a>
-        <nav>
-            <a href="#menu">Menu</a>
-        </nav>
-    </header>
-    <nav id="menu">
-        <ul class="links">
-            <li>
-                <a href="/index.html">Home</a>
-            </li>
-            <li>
-                <a href="/blog.html">Blog</a>
-            </li>
-        </ul>
+	<header id="header">
+		<a class="logo" href="/index.html">
+			HTML5
+		</a>
+		<nav>
+			<a href="#menu">Menu</a>
+		</nav>
+	</header>
+	<nav id="menu">
+		<ul class="links">
+			<li>
+				<a href="/index.html">Home</a>
+			</li>
+			<li>
+				<a href="/blog.html">Blog</a>
+			</li>
+		</ul>
 
-    </nav>
+	</nav>
 
-    <main class="wrapper">
-        <section class="inner">
-            <article class="content">
-                <header>
-                    <h2>
-                        A szekció
-                    </h2>
-                    <p>
-                        Ez az elem is alapvetően a tartalom tagolására való
-                        több mélységben is egymásba lehet ágyazni.
-                    </p>
-                    <h3>Példakód:</h3>
-                    <code>
+	<main class="wrapper">
+		<section class="inner">
+			<article class="content">
+				<header>
+					<h2>
+						A szekció
+					</h2>
+					<p>
+						Ez az elem is alapvetően a tartalom tagolására való
+						több mélységben is egymásba lehet ágyazni.
+					</p>
+					<h3>Példakód:</h3>
+					<code>
                         &lt;section&gt;Some content&lt;/section&gt;
                     </code>
-                </header>
-            </article>
-            <article class="content">
-				<header>
-					<h2>Feugiat consequat</h2>
 				</header>
-				<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt
-					felis sagittis eget. tempus euismod. Magna et cursus lorem
-					faucibus vestibulum. Blandit adipiscing eu felis iaculis
-					volutpat ac adipiscing accumsan eu faucibus. Integer ac
-					pellentesque praesent tincidunt felis sagittis eget. tempus
-					euismod tempus. Vestibulum ante ipsum primis in faucibus
-					vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-					adipiscing accumsan eu faucibus. Integer ac pellentesque
-					praesent tincidunt felis sagittis eget. tempus euismod.
-					Vestibulum ante ipsum primis in faucibus vestibulum. Blandit
-					adipiscing eu felis iaculis volutpat ac adipiscing accumsan
-					eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante
-					nunc ac gravida lorem ipsum dolor sit amet dolor feugiat
-					consequat. </p>
-				<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt
-					felis sagittis eget. tempus euismod. Magna et cursus lorem
-					faucibus vestibulum. Blandit adipiscing eu felis iaculis
-					volutpat ac adipiscing accumsan eu faucibus. Integer ac
-					pellentesque praesent tincidunt felis sagittis eget. tempus
-					euismod tempus. Vestibulum ante ipsum primis in faucibus
-					vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-					adipiscing accumsan eu faucibus. Integer ac pellentesque
-					praesent tincidunt felis sagittis eget. tempus euismod.
-					Vestibulum ante ipsum primis in faucibus vestibulum. Blandit
-					adipiscing eu felis iaculis volutpat ac adipiscing accumsan
-					eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante
-					nunc ac gravida lorem ipsum dolor sit amet dolor feugiat
-					consequat. </p>
+			</article>
+			<article class="content">
+				<header>
+					<h2>5 Tipp a hatékony SEO -hoz</h2>
+				</header>
+				<p>Enged meg, hogy hatékony tippekkel segítsem az oldalad megjelenését a Google keresőben</p>
+				<p>Mi is a SEO? Gondolj arra, hogy szeretnél venni egy vasalót. Mit csinálsz ilyenkor? Természetesen felmész a google weboldalra és beütöd a keresébe.
+					A te vevőd is pont ezt fogja csinálni.
+					Ezért szeretnél Te az 1. helyen szerepelni a találati listában. 
+				</p>
 				<hr />
 				<h3>Magna odio tempus commodo</h3>
 				<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id
@@ -98,8 +78,12 @@
 			</article>
 			<article class="content">
 				<header>
-					<h2>Feugiat consequat</h2>
+					<h2>Védd meg a földet</h2>
 				</header>
+				<video style="margin: 20px auto" controls width="480">
+					<source src="/vidoe/video.mp4"
+					type="video/mp4"> 
+				</video>
 				<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt
 					felis sagittis eget. tempus euismod. Magna et cursus lorem
 					faucibus vestibulum. Blandit adipiscing eu felis iaculis
@@ -129,46 +113,39 @@
 					nunc ac gravida lorem ipsum dolor sit amet dolor feugiat
 					consequat. </p>
 				<hr />
-				<h3>Magna odio tempus commodo</h3>
-				<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id
-					enim aliquet. Accumsan ac integer lobortis commodo ornare
-					aliquet accumsan erat tempus amet porttitor. Ante commodo
-					blandit adipiscing integer semper orci eget. Faucibus
-					commodo adipiscing mi eu nullam accumsan morbi arcu ornare
-					odio mi adipiscing nascetur lacus ac interdum morbi accumsan
-					vis mi accumsan ac praesent.</p>
-				<p>Felis sagittis eget tempus primis in faucibus vestibulum.
-					Blandit adipiscing eu felis iaculis volutpat ac adipiscing
-					accumsan eu faucibus. Integer ac pellentesque praesent
-					tincidunt felis sagittis eget. tempus euismod. Magna sed
-					etiam ante ipsum primis in faucibus vestibulum. Blandit
-					adipiscing eu ipsum primis in faucibus vestibulum. Blandit
-					adipiscing eu felis iaculis volutpat ac adipiscing accumsan
-					eu faucibus lorem ipsum dolor sit amet nullam.</p>
+				<header><h3>Cisco megoldások</h3></header>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/qJc1n81MOqU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</article>
-        </section>
-    </main>
+		</section>
+	</main>
 
-    <aside class="wrapper">
-        <section class="inner">
-            <article class="contant">
-                <iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
-            </article>
-            <article class="content">
-                <details open>
-                    <summary>Hasznos linkek</summary>
-                    <p>Itt megtalálod a HTML dokumentációt.</p>
-                    <a href="http://www.w3schools.com/html/default.asp">
-                        HTML5 dokumentáció
-                    </a>
-                </details>
-            </article>
-        </section>
-    </aside>
+	<aside class="wrapper">
+		<section class="inner">
+			<article class="contant">
+				<h3>💰 Apple Goods</h3>
+				<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
+			</article>
+			<article class="content">
+				<details open>
+					<summary>Hasznos linkek</summary>
+					<p>Itt megtalálod a HTML dokumentációt.</p>
+					<a href="http://www.w3schools.com/html/default.asp">
+						HTML5 dokumentáció
+					</a>
+				</details>
+			</article>
+			<article class="content">
+				<audio controls>
+					<source src="/audio/audio.mp3"
+					type="audio/mpeg"> 
+				</audio>
+			</article>
+		</section>
+	</aside>
 
-    <footer id="footer">
-        <div class="inner">
-            <div class="content">
+	<footer id="footer">
+		<div class="inner">
+			<div class="content">
 				<section>
 					<h3>Accumsan montes viverra</h3>
 					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing
@@ -193,30 +170,27 @@
 				<section>
 					<h4>Magna sed ipsum</h4>
 					<ul class="plain">
-						<li><a href="#"><i
-									class="icon fa-twitter">&nbsp;</i>Twitter</a>
+						<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
 						</li>
-						<li><a href="#"><i
-									class="icon fa-facebook">&nbsp;</i>Facebook</a>
+						<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
 						</li>
-						<li><a href="#"><i
-									class="icon fa-instagram">&nbsp;</i>Instagram</a>
+						<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
 						</li>
-						<li><a href="#"><i
-									class="icon fa-github">&nbsp;</i>Github</a>
+						<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a>
 						</li>
 					</ul>
 				</section>
 			</div>
-        </div>
-    </footer>
-    
-<!-- Scripts. -->
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/browser.min.js"></script>
-<script src="/assets/js/breakpoints.min.js"></script>
-<script src="/assets/js/util.js"></script>
-<script src="/assets/js/main.js"></script>
+		</div>
+	</footer>
+
+	<!-- Scripts. -->
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/browser.min.js"></script>
+	<script src="/assets/js/breakpoints.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<script src="/assets/js/main.js"></script>
 
 </body>
+
 </html>
